--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     		<td>YES</td>
     		<td>YES</td>
     	</tr>
+
+        <tr align="center">
+            <td><b>Box Shadow</b></td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+        </tr>
     </table>
 </head>
 <body>
