--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
             <td>YES</td>
             <td>YES</td>
         </tr>
+
+        <tr align="center">
+            <td><b>CSS Animations</b></td>
+            <td>NO</td>
+            <td>NO</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>NO</td>
+        </tr>
     </table>
 </head>
 <body>
